# systemD-manager-control

./: .gitignore  Cargo.toml  README.md  meson.build  org.systemd.control.json  systemd-manager-control.doap
data/: meson.build  org.systemd.control.desktop.in  org.systemd.control.gschema.xml  org.systemd.control.metainfo.xml.in
data/icons/: meson.build
data/resources/: style.css
po/: POTFILES  meson.build
src/: application.rs  config.rs  daemon.rs  daemon_row.ui  main.rs  meson.build  systemdcontrol.gresource.xml  window.rs  window.ui
src/daemon_object/: imp.rs  mod.rs
src/daemon_row/: daemon_row.ui  imp.rs  mod.rs
src/window/: imp.rs  mod.rs  window.ui
