[package]
name = "systemdcontrol"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
maintainer = "Michael Aaron Murphy <mmstickman@gmail.com>"
copyright = "2017, Michael Aaron Murphy <mmstickman@gmail.com>"
license-file = ["COPYING", "4"]
depends = "$auto"
section = "utility"
priority = "optional"

[dependencies]
cargo-deb = "2.1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"] }
systemctl = "0.3.1"
tokio = { version = "1", features = ["full"] }
async-channel = { version = "2.2.1" }
serde = { version = "1.0.198", features = ["derive"] }
const-str = "0.5.7"
gvdb-macros = "0.1.12"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
